[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
requests = "^2.28.1"
Flask = "^2.1.3"
opuslib = "^3.0.1"
bottle = "^0.12.21"
myname = "^1.0.2"
discord-ui = "^5.1.6"
pycord = "^0.1.1"
gTTS = "^2.2.4"
SpeechRecognition = "^3.8.1"
ffmpeg = "^1.4"
opus20 = "^1.0.1"
discord = "^1.7.3"
youtube_dl = "^2021.12.17"
python-dotenv = "^0.20.0"
prettytable = "^3.6.0"
"discord.py" = "^2.3.2"
pytube = "^15.0.0"
youtube-search = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"